Bug 137315 - EDITING Validation list disappears right after opening
Summary: EDITING Validation list disappears right after opening
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-10-07 15:04 UTC by NISZ LibreOffice Team
Modified: 2020-11-09 13:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc (10.00 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-10-07 15:04 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-07 15:04:49 UTC
Created attachment 166166 [details]
Example file from Calc

If there is a validation list where users could select a value, and they click on the arrow, the list appears for a blink of an eye then disappears.
This used to stay open in 7.0.

Steps to reproduce:
    1. Open attached file
    2. In B2 cell open the validation list with the mouse (keyboard Alt+Down works though)

Actual results:
List opens only for a fraction of a second.

Expected results:
List stays open.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a883002d8e2fd77f80c43b7b2e6ac329d83d929d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL


Additional Information: 

Bibisected using bibisect-win64-7.1 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=d6533cb372bd75f839674fd36640fa466d496efd 

author
Caolán McNamara <caolanm@redhat.com>
2020-06-15 12:17:10 +0100
committer
Caolán McNamara <caolanm@redhat.com>
2020-06-15 18:05:46 +0200

ReleaseMouse so focus can be grabbed by the FilterFloat

Adding CC to: Caolán McNamara
Comment 1 Caolán McNamara 2020-10-07 15:45:40 UTC
The scenario menu doesn't have this problem, but uses the same dropdown menu
Comment 2 Caolán McNamara 2020-10-07 16:08:13 UTC
The difference between behaviour seems to just be because of the placement of the menu wrt the launching button. Its not "under" the failing case but to one side.
Comment 3 Commit Notification 2020-10-07 18:26:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/97b960492e2ce26f881d80e07bf691d682bb4173

Resolves: tdf#137315 explicitly use FloatWinPopupFlags::NoMouseUpClose

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2020-11-09 13:10:50 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: d3cee4f3839e22754e167e89d25acd6ccacf0b6e
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded