Resolves: tdf#137315 explicitly use FloatWinPopupFlags::NoMouseUpClose

so the popup won't disappear on releasing the mouse

Change-Id: Ib496ad286c06305eca67f865946a8303e93118f8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104065
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>